default/objects/Feed_Event__c/Feed_Event__c.object-meta.xml
<CustomObject>
    <description>A description of an event that took place in relation to a Conversation.</description>
    <label>Feed Event</label>
    <nameField>
        <displayFormat>Feed Event-{0000}</displayFormat>
        <label>Feed Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feed Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>