default/objects/Feed_Event__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>The ID of the agent who performed the described action.</description>
    <label>Actor</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>