default/objects/Feed_Event__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date and time at which the event occurred.</description>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>