default/objects/Feed_Event__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The ID of the subject upon or for whom the action was performed.</description>
    <label>Subject</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>