default/objects/Feed_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of action this event describes.</description>
    <label>Type</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>